fixed some bugs (disappearing of destination cell and overlap of destination and starting cell)

--- a/index.css
+++ b/index.css
@@ -1,40 +1,74 @@
-.container{
-	position: relative;
-}
+ 
 #btmnav{
   background-color: #333;
   position: fixed;
   bottom :0;
   width: 100%;
-  height: fit-content;
-    
+  height: fit-content;  
 }
 #grid{
-	left: 0;
+	margin: 0 auto;
 }
 .cell{
-	 
-	background-color: #FFFF99;
- 
+	width: 10px;
+	height: 10px;
+	background-color:  #ffffff;
+  
 }
 .visitedcell{
- 
+  width: 10px;
+	height: 10px;
 	background-color: #87f5ff;
+	animation-name: example;
+  animation-duration: 0.5s;
+  border-radius: 0px;
+
+}
+.boundaryvisitedcell{
+  width: 10px;
+	 height: 10px;
+		background-color: #87f5ff;
+	animation-name: example;
+  animation-duration: 0.5s;
+  border-radius: 6px;
+
 }
 .pathcell{
- 
+  width: 10px;
+	 height: 10px;
 	background-color: #26ff12;
+	animation-name: example;
+  animation-duration: 0.05s;
+  border-radius: 0px;
 }
 .startingcell{
- 
+  width: 10px;
+	 height: 10px;
 	background-color: #ffb300;
+	border-radius: 6px;
+	 
 }
 .destinationcell{
- 
+  width: 10px;
+	 height: 10px;
 	background-color: #8B0000;
+	border-radius: 6px;
+ 
+
+
+
 }
-.obstacle{
+#obstacle{
+	 width: 10px;
+	 height: 10px;
 	background-color: #000000;
+	 animation-name: example;
+  animation-duration: 0.2s;
+  border-radius: 0px;
+}
+@keyframes example {
+  from {border-radius: 6px; background-color: #6666ff;}
+  to {border-radius: 0px; background-color: #87f5ff;}
 }
 #no_path{
 	width: 400px;
